crates/reinhardt-core/crates/macros/tests/ui/path/fail/parameter_starts_with_number.rs
// Test: URL pattern with parameter starting with number should fail

use reinhardt_macros::path;

fn main() {
    let pattern = path!("polls/{1id}/");
}
