crates/reinhardt-core/crates/macros/tests/ui/path/fail/parameter_starts_with_number.stderr
error: Invalid parameter syntax at position 6. Perhaps you meant to close a previous parameter?
 --> tests/ui/path/fail/parameter_starts_with_number.rs:6:25
  |
6 |     let pattern = path!("polls/{1id}/");
  |                         ^^^^^^^^^^^^^^
